force-app/main/default/objects/ZRH_Bypass__c/ZRH_Bypass__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Configuración utilizada para deshabilitar VRs, Flows, PBs, WFRs y Triggers</description>
    <label>ZRH_Bypass</label>
</CustomObject>