force-app/main/default/objects/ZRH_Bypass__c/fields/ZRH_DesactivarFlows__c.field-meta.xml
<CustomField>
    <fullName>ZRH_DesactivarFlows__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que desactiva todos los Flows (Flujos) de la organización</description>
    <label>DesactivarFlows</label>
    <type>Checkbox</type>
</CustomField>