force-app/main/default/objects/ZRH_Bypass__c/fields/ZRH_DesactivarProcessBuilders__c.field-meta.xml
<CustomField>
    <fullName>ZRH_DesactivarProcessBuilders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que desactiva todos los Process Builders de la organización</description>
    <label>DesactivarProcessBuilders</label>
    <type>Checkbox</type>
</CustomField>