force-app/main/default/objects/ZRH_Bypass__c/fields/ZRH_DesactivarTriggers__c.field-meta.xml
<CustomField>
    <fullName>ZRH_DesactivarTriggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que desactiva todas los Triggers (Desencadenadores de Apex) de la organización.</description>
    <label>DesactivarTriggers</label>
    <type>Checkbox</type>
</CustomField>