force-app/main/default/objects/ZRH_Bypass__c/fields/ZRH_DesactivarValidationRules__c.field-meta.xml
<CustomField>
    <fullName>ZRH_DesactivarValidationRules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que desactiva todas las Validation Rules (Reglas de Validación) de la organización.</description>
    <label>DesactivarValidationRules</label>
    <type>Checkbox</type>
</CustomField>