force-app/main/default/objects/ZRH_Bypass__c/fields/ZRH_DesactivarWorkflowRules__c.field-meta.xml
<CustomField>
    <fullName>ZRH_DesactivarWorkflowRules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que desactiva todos los Workflow Rules (Reglas de flujo de trabajo) de la organización</description>
    <label>DesactivarWorkflowRules</label>
    <type>Checkbox</type>
</CustomField>